--- a/source/public/styles/static.css
+++ b/source/public/styles/static.css
@@ -1,21 +1,33 @@
 /* HEADER */
 @media (width >= 900px) {
 	header .alt-fullwidth { display: auto; }
-	header .alt-contracted {	display: none; }
+	header .alt-contracted { display: none; }
 	header .alt-collapsed { display: none; }
 }
 @media (width < 900px) {
-	header .alt-contracted {	display: auto; }
+	header .alt-contracted { display: auto; }
 	header .alt-fullwidth { display: none; }
 }
 @media (width >= 768px) {
 	header .alt-collapsed { display: none; }
+	header .nav-icon {
+		margin: 0;
+	}
 }
 @media (width < 768px) {
 	header .alt-collapsed { display: auto; }
+	header .nav-icon {
+		margin-right: 10px;
+		width: 20px;
+		text-align: center;
+	}
+}
+header {
+	position: fixed;
+	z-index: 99;
+	width: 100%;
 }
 header .navbar {
-	position: fixed;
   border-radius: 0;
 	width: 100%;
 	border: none;
@@ -38,9 +50,6 @@ header .navbar-account span {
 }
 header .nav-icon {
 	display: inline-block;
-	margin-right: 10px;
-	width: 20px;
-	text-align: center;
 }
 header .nav-icon img {
 	margin-bottom: 3px;
@@ -60,15 +69,21 @@ header .nav-icon img {
 	color: white;
 	text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
-#search-bar {
+#search-content {
   padding: 5em 0;
   margin: auto;
   width: 80%;
 	max-width: 750px;
 }
-#search form {
+#search-bar {
 	background-color: var(--white-off);
 	border-radius: 3px;
+}
+#search-bar.sticky {
+	position: fixed;
+	z-index: 99;
+	top: 50px;
+	width: 100%;
 }
 #search input, #search button {
 	height: 40px;
@@ -89,13 +104,13 @@ header .nav-icon img {
 
 
 /* FOOTER */
-@media (min-width: 993px) {
+@media (min-width: 992px) {
 	footer .row {
 		max-width: 1100px;
 		margin: auto;
 	}
 }
-@media (max-width: 992px) {
+@media (max-width: 991px) {
 	footer .row {
 		margin: auto 5% 24px 5%;
 	}
